# dictation-rs

./: .gitignore  Cargo.toml  DEPLOYMENT.md  GET_STARTED.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  config.sample.toml  push-to-github.bat
.github/workflows/: build.yml
resources/: ICONS.md
src/: config.rs  main.rs  state.rs
src/audio/: capture.rs  ducking.rs  mod.rs  vad.rs
src/deepgram/: client.rs  types.rs
src/keyboard/: simulator.rs
src/tray/: icon.rs
