[package]
name = "dictation-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.14"
directories = "5"
toml = "0.8"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_Foundation",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
